Add caption hint to mobile view for project links

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>Personal Project - This Portfolio!</h3>
-                <div id="portfolioCarouselMob" class="carousel slide proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block" data-ride="carousel">
+                <div id="portfolioCarouselMob" class="carousel slide proj-img-wrap col-md-9 mx-auto d-md-none d-block" data-ride="carousel">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <a href="https://tf-portfolio.glitch.me" target="_blank"><img class="w-100" src="images/portfolio.PNG"></a>
@@ -221,6 +221,7 @@
                     <span class="sr-only">Next</span>
                   </a>
                 </div>
+                <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>I built most of this site using Bootstrap with a bit of custom CSS and JavaScript. As a challenge I took a dive into the world of cloud computing and set up an AWS API Gateway connected to an AWS lambda function using Serverless in order to handle my contact form's back end. I then set up Amazon SES to email any sent messages through to me.</p>
               <ul>
                 <li>Node</li>
@@ -254,9 +255,10 @@
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>Personal Project - To Do List</h3>
-              <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
+              <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
                 <a href="https://todo-list-tf.glitch.me" target="_blank"><img class="w-100" src="images/toDoList.PNG"></a>
               </div>
+              <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>I decided to build my first app from the ground up using Node/Express along with MongoDB Atlas for the database. I also took the opportunity to learn Nunjucks and implement it in the project.<br><br>I <a href="https://trello.com/b/kGcryyi7/coding-practice-todolist-app" target="_blank">used Trello</a> to plan my workflow which helped me get a better understanding of the platform.</p>
               <ul>
                 <li>Node</li>
@@ -276,9 +278,10 @@
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - Stock Price Checker</h3>
-              <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
+              <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
                 <a href="https://fcc-stock-price-checker-tf.glitch.me" target="_blank"><img class="w-100" src="images/stockPriceChecker.PNG"></a>
               </div>
+              <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>This is the fCC project that took me the longest to complete. The most difficult element was creating the unique "Stock Likes" per IP functionality. I acheived it by logging IPs as a subdocument of the Stock item whenever a "Like" is submitted and checking all "Likes" against the logged IPs, giving me a degree of session management. It was also a good exercise in using another website's API in my code</p>
               <ul>
                 <li>Node</li>
@@ -312,9 +315,10 @@
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - Exercise Tracker</h3>
-              <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
+              <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
                 <a href="https://fcc-exercise-tracker-rest-api-tf.glitch.me" target="_blank"><img class="w-100" src="images/exerciseTracker.PNG"></a>
               </div>
+              <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>This was the first project that got me working with MongoDB/Mongoose in conjunction with Express in a more in-depth way. It helped to give me a much better sense of how no-SQL databases can be used to handle user data</p>
               <ul>
                 <li>Node</li>
@@ -331,9 +335,10 @@
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="col-md-3 mx-auto text-left">
               <h3>fCC Project - Choropleth Map</h3>
-              <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
+              <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
                 <a href="https://codepen.io/tfox121/pen/pozXqrW" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.pozXqrW.efb02a1f-c888-4df7-a179-a44e9b828023.png"></a>
               </div>
+              <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>This project took quite a lot of reading around to be able to even start as choropleths weren't covered in the fCC syllabus.<br><br>The colour scale was a lot easier to implement on this project after all the reading and testing I'd done to figure out the colouring for the heatmap project beforehand (see <a href="https://codepen.io/tfox121/pen/vYBwQyV" target="_blank">here</a>).<br><br>It was an incredibly satisfying project to bring together as it gave me a real appreciation for what even a few lines of code can do with a large amount of real data</p>
               <ul>
                 <li>d3</li>
@@ -359,9 +364,10 @@
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - JavaScript Calculator</h3>
-              <div class="proj-img-wrap col-md-9 mx-auto mb-3 d-md-none d-block">
+              <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
                 <a href="https://codepen.io/tfox121/pen/MNJZap" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.MNJZap.e7f8e4ba-ce8f-43f0-a5a9-7c6151315763.png"></a>
               </div>
+              <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>One of the first projects that really tested me. Looking back at my work I can see a lot of things that I'd do differently, but it was a great way to learn more about asynchronous programming, especially in relation to React and managing state.<br><br>One of the hardest parts of the project way putting together the logic to be able to handle the contextual interpretation of the use of the minus button. A simple +/- toggle would have been a lot easier, but that's not what fCC's testing called for!</p>
               <ul>
                 <li>React</li>
