Change broken JS Calc codepen to glitch source
Also removed unnecessary inline CSS from iframes.

--- a/index.html
+++ b/index.html
@@ -249,8 +249,7 @@
               <iframe
                 src="https://glitch.com/embed/#!/embed/todo-list-tf?path=package.json&previewSize=100"
                 title="todo-list-tf on Glitch"
-                allow="geolocation; microphone; camera; midi; vr; encrypted-media"
-                style="height: 100%; width: 100%; border: 0;">
+                allow="geolocation; microphone; camera; midi; vr; encrypted-media">
               </iframe>
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
@@ -295,8 +294,7 @@
               <iframe
                 src="https://glitch.com/embed/#!/embed/fcc-stock-price-checker-tf?path=package.json&previewSize=100"
                 title="fcc-stock-price-checker-tf on Glitch"
-                allow="geolocation; microphone; camera; midi; vr; encrypted-media"
-                style="height: 100%; width: 100%; border: 0;">
+                allow="geolocation; microphone; camera; midi; vr; encrypted-media">
               </iframe>
             </div>
           </div>
@@ -309,8 +307,7 @@
               <iframe
                 src="https://glitch.com/embed/#!/embed/fcc-exercise-tracker-rest-api-tf?path=README.md&previewSize=100"
                 title="fcc-exercise-tracker-rest-api-tf on Glitch"
-                allow="geolocation; microphone; camera; midi; vr; encrypted-media"
-                style="height: 100%; width: 100%; border: 0;">
+                allow="geolocation; microphone; camera; midi; vr; encrypted-media">
               </iframe>
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
@@ -336,7 +333,7 @@
             <div class="col-md-3 mx-auto text-left">
               <h3>fCC Project - Choropleth Map</h3>
               <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
-                <a href="https://codepen.io/tfox121/pen/pozXqrW" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.pozXqrW.efb02a1f-c888-4df7-a179-a44e9b828023.png"></a>
+                <a href="https://codepen.io/tfox121/full/pozXqrW" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.pozXqrW.efb02a1f-c888-4df7-a179-a44e9b828023.png"></a>
               </div>
               <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>This project took quite a lot of reading around to be able to even start as choropleths weren't covered in the fCC syllabus.<br><br>The colour scale was a lot easier to implement on this project after all the reading and testing I'd done to figure out the colouring for the heatmap project beforehand (see <a href="https://codepen.io/tfox121/pen/vYBwQyV" target="_blank">here</a>).<br><br>It was an incredibly satisfying project to bring together as it gave me a real appreciation for what even a few lines of code can do with a large amount of real data</p>
@@ -357,15 +354,16 @@
         <div class="col-xl-10 col-lg-11 col-12 my-auto">
           <div class="project-wrapper row card bg-dark flex-row shadow">
             <div class="glitch-embed-wrap col-md-9 mx-auto d-none d-md-block ">
-              <iframe height="100%" style="width: 100%;" scrolling="no" title="FCC: Javascript Calculator " src="https://codepen.io/tfox121/embed/preview/MNJZap?height=265&theme-id=light&default-tab=result" frameborder="no" allowtransparency="true" allowfullscreen="true">
-                See the Pen <a href="https://codepen.io/tfox121/pen/MNJZap">FCC: Javascript Calculator </a> by tfox121
-                (<a href="https://codepen.io/tfox121">@tfox121</a>) on <a href="https://codepen.io">CodePen</a>.
+              <iframe
+                src="https://glitch.com/embed/#!/embed/fcc-javascriptcalculator-tf?path=src/index.js&previewSize=100"
+                title="fcc-javascriptcalculator-tf on Glitch"
+                allow="geolocation; microphone; camera; midi; vr; encrypted-media">
               </iframe>
             </div>
             <div class="col-md-3 mx-auto text-left d-flex flex-column">
               <h3>fCC Project - JavaScript Calculator</h3>
               <div class="proj-img-wrap col-md-9 mx-auto d-md-none d-block">
-                <a href="https://codepen.io/tfox121/pen/MNJZap" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.MNJZap.e7f8e4ba-ce8f-43f0-a5a9-7c6151315763.png"></a>
+                <a href="https://fcc-javascriptcalculator-tf.glitch.me/" target="_blank"><img class="w-100" src="https://screenshot.codepen.io/3285860.MNJZap.e7f8e4ba-ce8f-43f0-a5a9-7c6151315763.png"></a>
               </div>
               <p class="link-caption text-center d-md-none d-block">tap picture to see more</p>
               <p>One of the first projects that really tested me. Looking back at my work I can see a lot of things that I'd do differently, but it was a great way to learn more about asynchronous programming, especially in relation to React and managing state.<br><br>One of the hardest parts of the project way putting together the logic to be able to handle the contextual interpretation of the use of the minus button. A simple +/- toggle would have been a lot easier, but that's not what fCC's testing called for!</p>
